--- a/assets/style.css
+++ b/assets/style.css
@@ -69,18 +69,72 @@ textarea {
 
 .timeblock-information {
   position: relative;
+  
 }
+
+.timeblock-event-information {
+  width: 420%;
+}
+
 
 #saveButton {
   position: absolute;
   top: 0;
   right: 0;
   min-height: 200px;
-  margin-right: 20px;
 }
 
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+/* ***** RESPONSIVENESS ******* */
+
+@media (max-width: 1100px) {
+  .timeblock-event-information {
+    width: 360%;
+  }
+
+  .display-3 {
+    font-size: 2rem;
+  }
+
+}
+
+@media (max-width: 990px) {
+  .timeblock-event-information {
+    width: 250%;
+  }
+
+}
+
+@media (max-width: 760px) {
+  .timeblock-event-information {
+    width: 180%;
+  }
+}
+
+@media (max-width: 520px) {
+  .timeblock-event-information {
+    width: 120%;
+  }
+}
+
+@media (max-width: 400px) {
+  .timeblock-event-information {
+    width: 110%;
+  }
+
+  .display-3 {
+    font-size: 1.5rem;
+    margin-bottom: 12%;
+  }
+}
+
+@media (max-width: 330px) {
+  .timeblock-event-information {
+    width: 90%;
+  }
 }
